reset the site.url to upthebuzzard.github.io for now

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >
   initially an experiment to port stories.upthebuzzard.com
   from wordpress.com to Jekyll on GitHub
 baseurl: "" # the subpath of your site, e.g. /blog
-url: http://stories.upthebuzzard.com # the base hostname & protocol for your site, e.g. http://example.com
+url: http://upthebuzzard.github.io # stories.upthebuzzard.com # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: upthebuzzard
 github_username:  upthebuzzard
 author: Chris Gathercole
