added jekyll_notes collection

--- a/_config.yml
+++ b/_config.yml
@@ -42,3 +42,8 @@ collections:
     title: The Grey Parrot Stories
     title_singular: A Grey Parrot Story
     description: a collection of stories about the (too) clever grey parrot
+  jekyll_notes:
+    output: true
+    title: Jekyll Notes
+    title_singular: A Jekyll Note
+    description: a collection of notes and observations from and aid-memoires for using Jekyll for the first time.
