--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Assorted Story Collections
+title: A Smattering of Stories
 email: cgathercole@gmail.com
 description: >
   initially an experiment to port stories.upthebuzzard.com
