tweaking the porthole include

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ twitter_username: upthebuzzard
 github_username:  upthebuzzard
 author: Chris Gathercole
 lang: en
+default_collection_background_image_url: /assets/P1070749.JPG
 
 license_name: Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
 license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
