reduced images sizes

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ twitter_username: upthebuzzard
 github_username:  upthebuzzard
 author: Chris Gathercole
 lang: en
-default_collection_background_image_url: /assets/P1070749.JPG
+default_collection_background_image_url: /assets/P1070749-H800.JPG
 
 license_name: Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
 license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
@@ -44,14 +44,14 @@ collections:
     title_singular: A Moose and Goose Story
     description: a collection of stories about Moose and Goose, Solvers of Tricky Problems
     sequence: 1
-    background_image_url: /assets/P1070818.JPG
+    background_image_url: /assets/P1070818-H800.JPG
   grey_parrot_stories:
     output: true
     title: The Grey Parrot Stories
     title_singular: A Grey Parrot Story
     description: a collection of stories about the (too) clever grey parrot
     sequence: 2
-    background_image_url: /assets/P1070812.JPG
+    background_image_url: /assets/P1070812-H800.JPG
   predicting_the_present:
     output: true
     title: Predicting the Present
