added distractions collection to hold bedtime bribery links, also tweaked RSS segment to only display if >0 posts

--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,12 @@ collections:
     title_singular: A Fragment
     description: riffing on whatever is riff-worthy
     sequence: 20
+  distractions:
+    output: true
+    title: Distractions
+    title_singular: A Distraction
+    description: a collection of interesting links
+    sequence: 90
   jekyll_notes:
     output: true
     title: Jekyll Notes
