--- a/_config.yml
+++ b/_config.yml
@@ -83,3 +83,4 @@ collections:
     title_singular: A Jekyll Note
     description: a collection of notes and observations from and aide-memoires for using Jekyll for the first time.
     sequence: 100
+    background_image_url: /assets/JekyllAndHydeWikipedia.jpg
