--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ author: Chris Gathercole
 lang: en
 default_collection_background_image_url: /assets/P1070749-H800.JPG
 
+google_analytics: UA-92309370-1
+
 license_name: Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
 license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
 
