new post: added simple site search

--- a/_config.yml
+++ b/_config.yml
@@ -87,3 +87,4 @@ collections:
     description: a collection of notes and observations from and aide-memoires for using Jekyll for the first time.
     sequence: 100
     background_image_url: /assets/JekyllAndHydeWikipedia.jpg
+    reverse_posts: true
