included auto-generated page sin nav

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_repo: https://github.com/upthebuzzard/upthebuzzard.github.io
 author: Chris Gathercole
 lang: en
 default_collection_background_image_url: /assets/P1070749-H800.JPG
-
+auto-generated-title: "in the style of..."
 google_analytics: UA-92309370-1
 
 license_name: Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
