--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ github_username:  upthebuzzard
 github_repo: https://github.com/upthebuzzard/upthebuzzard.github.io
 author: Chris Gathercole
 lang: en
-default_collection_background_image_url: /assets/P1070749-H800.JPG
+default_collection_background_image_url: /assets/img/general/P1070749-H800.JPG
 auto-generated-title: "in the style of..."
 google_analytics: UA-92309370-1
 
@@ -50,14 +50,14 @@ collections:
     title_singular: A Moose and Goose Story
     description: a collection of stories about Moose and Goose, Solvers of Tricky Problems
     sequence: 1
-    background_image_url: /assets/P1070818-H800.JPG
+    background_image_url: /assets/img/moose-and-goose/P1070818-H800.JPG
   grey_parrot_stories:
     output: true
     title: The Grey Parrot Stories
     title_singular: A Grey Parrot Story
     description: a collection of stories about the (too) clever grey parrot
     sequence: 2
-    background_image_url: /assets/P1070812-H800.JPG
+    background_image_url: /assets/img/grey-parrot/P1070812-H800.JPG
   predicting_the_present:
     output: true
     title: Predicting the Present
@@ -96,5 +96,5 @@ collections:
     title_singular: A Jekyll Note
     description: a collection of notes and observations from and aide-memoires for using Jekyll for the first time.
     sequence: 100
-    background_image_url: /assets/JekyllAndHydeWikipedia.jpg
+    background_image_url: /assets/img/jekyll-notes/JekyllAndHydeWikipedia.jpg
     reverse_posts: true
