--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ theme: minima
 gems:
   - jekyll-feed
   - jekyll-sitemap # via https://help.github.com/articles/sitemaps-for-github-pages/
+  - jekyll-redirect-from # via https://help.github.com/articles/redirects-on-github-pages/
 exclude:
   - Gemfile
   - Gemfile.lock
