--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author: Chris Gathercole
 lang: en
 default_background_image_url: /assets/img/general/P1070749-H800.JPG
 credits:
-  - "Background image by [me](/about/)"
+  - "[Background image](/assets/img/general/P1070749-H800.JPG) by [me](/about/)"
 auto-generated-title: "in the style of..."
 google_analytics: UA-92309370-1
 
@@ -56,6 +56,8 @@ collections:
     description: a collection of stories about a pair of Solvers of Tricky Problems
     sequence: 1
     background_image_url: /assets/img/moose-and-goose/P1070818-H800.JPG
+    credits:
+      - "[Background image](/assets/img/moose-and-goose/P1070818-H800.JPG) by [me](/about/)"
   grey_parrot_stories:
     output: true
     title: The Grey Parrot Stories
@@ -63,6 +65,8 @@ collections:
     description: a collection of stories about a (too) clever parrot
     sequence: 2
     background_image_url: /assets/img/grey-parrot/P1070812-H800.JPG
+    credits:
+      - "[Background image](/assets/img/grey-parrot/P1070812-H800.JPG) by [me](/about/)"
   predicting_the_present:
     output: true
     title: Predicting the Present
@@ -90,6 +94,8 @@ collections:
     sequence: 30
     reverse_posts: true
     background_image_url: /assets/img/greedy-devils/P1080043w800.JPG
+    credits:
+      - "[Background image](/assets/img/greedy-devils/P1080043w800.JPG) by [me](/about/)"
   overgeneralisations:
     output: true
     title: Overgeneralisations
