fixing problem where games notes were pages not posts

--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ collections:
   games:
     output: true
     title: Notes on games
-    title_singular: A Note
+    title_singular: A Games Note
     description: exploring game ideas and mechanics
     sequence: 30
     reverse_posts: true
