tidying up story end note

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ lang: en
 default_background_image_url: /assets/img/general/P1070749-H800.JPG
 credits:
   - "[Background image](/assets/img/general/P1070749-H800.JPG) by [me](/about)"
-auto-generated-title: in the style of
+auto-generated-title: mashup
 google_analytics: UA-92309370-1
 
 license_name: Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License
