--- a/_config.yml
+++ b/_config.yml
@@ -136,3 +136,10 @@ collections:
     credits:
       - Background image from [Wikipedia](https://en.wikipedia.org/wiki/Strange_Case_of_Dr_Jekyll_and_Mr_Hyde#/media/File:Dr_Jekyll_and_Mr_Hyde_poster_edit2.jpg)
     reverse_posts: true
+  hifi:
+    output: true
+    title: Good Hifi On The Cheap
+    title_singular: A GHOTC Observation
+    title_abbrev: Hifi
+    description: Assorted thoughts and learnings on 'Good hifi on the cheap'
+    sequence: 110
